--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
+    <title>Portfolio</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="bg-zinc-950 text-zinc-100 font-sans">
+
+    <!-- Nav -->
+    <nav class="fixed top-0 w-full bg-zinc-950/80 backdrop-blur border-b border-zinc-800 z-50">
+      <div class="max-w-5xl mx-auto px-6 py-4 flex justify-between items-center">
+        <a href="#" class="font-mono font-bold text-accent">~/portfolio</a>
+        <div class="flex gap-6 font-mono text-sm text-zinc-400">
+          <a href="#about" class="hover:text-accent transition-colors">about</a>
+          <a href="#projects" class="hover:text-accent transition-colors">projects</a>
+          <a href="#skills" class="hover:text-accent transition-colors">skills</a>
+          <a href="#contact" class="hover:text-accent transition-colors">contact</a>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero -->
+    <section id="hero" class="min-h-screen flex items-center">
+      <div class="max-w-5xl mx-auto px-6">
+        <p class="font-mono text-accent mb-4">Hi, my name is</p>
+        <h1 class="text-5xl sm:text-7xl font-bold tracking-tight mb-4">Your Name</h1>
+        <p class="text-xl sm:text-2xl text-zinc-400 max-w-2xl">
+          One-liner tagline about what you do.<span class="cursor-blink text-accent">_</span>
+        </p>
+      </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="py-24">
+      <div class="max-w-5xl mx-auto px-6">
+        <h2 class="font-mono text-accent text-sm mb-8">// about</h2>
+        <p class="text-zinc-300 text-lg max-w-2xl leading-relaxed">
+          A short bio goes here. Two to three sentences about who you are,
+          what you do, and what drives you.
+        </p>
+      </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="py-24">
+      <div class="max-w-5xl mx-auto px-6">
+        <h2 class="font-mono text-accent text-sm mb-8">// projects</h2>
+        <div id="projects-grid" class="grid gap-6 sm:grid-cols-2">
+          <!-- Rendered by main.js -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills" class="py-24">
+      <div class="max-w-5xl mx-auto px-6">
+        <h2 class="font-mono text-accent text-sm mb-8">// skills</h2>
+        <div id="skills-list" class="flex flex-wrap gap-3">
+          <!-- Rendered by main.js -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="py-24">
+      <div class="max-w-5xl mx-auto px-6">
+        <h2 class="font-mono text-accent text-sm mb-8">// contact</h2>
+        <p class="text-zinc-300 text-lg mb-6">Get in touch.</p>
+        <div class="flex gap-6 font-mono text-sm">
+          <a href="mailto:you@example.com" class="text-accent hover:underline">email</a>
+          <a href="https://github.com" class="text-accent hover:underline" target="_blank" rel="noopener">github</a>
+          <a href="https://linkedin.com" class="text-accent hover:underline" target="_blank" rel="noopener">linkedin</a>
+        </div>
+      </div>
+    </section>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
