--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <!-- Senior Software Engineer @ Sievo -->
                     <div class="relative pl-8">
                         <span
-                            class="absolute left-[-5px] top-1.5 h-2.5 w-2.5 rounded-full bg-accent"
+                            class="absolute -left-1.25 top-1.5 h-2.5 w-2.5 rounded-full bg-accent"
                         ></span>
                         <p class="font-mono text-xs text-zinc-500 mb-1">
                             March 2023 — Present
@@ -195,7 +195,7 @@
                     <!-- Software Engineer @ Sievo -->
                     <div class="relative pl-8">
                         <span
-                            class="absolute left-[-5px] top-1.5 h-2.5 w-2.5 rounded-full bg-zinc-700"
+                            class="absolute -left-1.25 top-1.5 h-2.5 w-2.5 rounded-full bg-zinc-700"
                         ></span>
                         <p class="font-mono text-xs text-zinc-500 mb-1">
                             July 2022 — March 2023
@@ -235,7 +235,7 @@
                     <!-- Fullstack Developer @ DecisionMapper -->
                     <div class="relative pl-8">
                         <span
-                            class="absolute left-[-5px] top-1.5 h-2.5 w-2.5 rounded-full bg-zinc-700"
+                            class="absolute -left-1.25 top-1.5 h-2.5 w-2.5 rounded-full bg-zinc-700"
                         ></span>
                         <p class="font-mono text-xs text-zinc-500 mb-1">
                             December 2020 — July 2022
@@ -281,7 +281,7 @@
                     <!-- .NET Developer / Team Lead @ DecisionMapper -->
                     <div class="relative pl-8">
                         <span
-                            class="absolute left-[-5px] top-1.5 h-2.5 w-2.5 rounded-full bg-zinc-700"
+                            class="absolute -left-1.25 top-1.5 h-2.5 w-2.5 rounded-full bg-zinc-700"
                         ></span>
                         <p class="font-mono text-xs text-zinc-500 mb-1">
                             October 2018 — June 2020
