Remove Homelab Infrastructure project and fix mobile grid layout

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <section id="projects" class="py-24">
             <div class="max-w-5xl mx-auto px-6">
                 <h2 class="font-mono text-accent text-sm mb-8">// projects</h2>
-                <div id="projects-grid" class="grid gap-6 sm:grid-cols-2">
+                <div id="projects-grid" class="grid gap-6 grid-cols-1 sm:grid-cols-2">
                     <!-- Rendered by main.js -->
                 </div>
             </div>
