--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <meta property="og:url" content="https://awocy.dev" />
         <meta property="og:type" content="website" />
         <link rel="canonical" href="https://awocy.dev" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="apple-touch-icon" href="/favicon.svg" />
     </head>
     <body class="bg-zinc-950 text-zinc-100 font-sans">
         <!-- Nav -->
@@ -340,7 +342,10 @@
         <section id="projects" class="py-24">
             <div class="max-w-5xl mx-auto px-6">
                 <h2 class="font-mono text-accent text-sm mb-8">// projects</h2>
-                <div id="projects-grid" class="grid gap-6 grid-cols-1 sm:grid-cols-2">
+                <div
+                    id="projects-grid"
+                    class="grid gap-6 grid-cols-1 sm:grid-cols-2"
+                >
                     <!-- Rendered by main.js -->
                 </div>
             </div>
