feat: add #posts section and nav link to main page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                         >projects</a
                     >
                     <a
+                        href="#posts"
+                        class="hover:text-accent transition-colors"
+                        >posts</a
+                    >
+                    <a
                         href="#skills"
                         class="hover:text-accent transition-colors"
                         >skills</a
@@ -344,6 +349,19 @@
                 <h2 class="font-mono text-accent text-sm mb-8">// projects</h2>
                 <div
                     id="projects-grid"
+                    class="grid gap-6 grid-cols-1 sm:grid-cols-2"
+                >
+                    <!-- Rendered by main.js -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Posts -->
+        <section id="posts" class="py-24">
+            <div class="max-w-5xl mx-auto px-6">
+                <h2 class="font-mono text-accent text-sm mb-8">// posts</h2>
+                <div
+                    id="posts-grid"
                     class="grid gap-6 grid-cols-1 sm:grid-cols-2"
                 >
                     <!-- Rendered by main.js -->
