Make decorative prefixes (// and ~/) non-selectable via CSS pseudo-elements

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div
                 class="max-w-5xl mx-auto px-6 py-4 flex justify-center sm:justify-between items-center"
             >
-                <a href="#" class="font-mono font-bold text-accent hidden sm:block">~/awocy</a>
+                <a href="#" class="nav-logo font-mono font-bold text-accent hidden sm:block">awocy</a>
                 <div class="flex gap-4 sm:gap-6 font-mono text-sm text-zinc-400">
                     <a
                         href="#experience"
@@ -152,8 +152,8 @@
 
             <section id="experience" class="py-24">
                 <div class="max-w-5xl mx-auto px-6">
-                    <h2 class="font-mono text-accent text-sm mb-10">
-                        // experience
+                    <h2 class="section-heading font-mono text-accent text-sm mb-10">
+                        experience
                     </h2>
                     <div class="border-l border-zinc-800 ml-2 space-y-10">
                         <!-- Senior Software Engineer @ Sievo -->
@@ -356,7 +356,7 @@
 
             <section id="projects" class="py-24">
                 <div class="max-w-5xl mx-auto px-6">
-                    <h2 class="font-mono text-accent text-sm mb-8">// projects</h2>
+                    <h2 class="section-heading font-mono text-accent text-sm mb-8">projects</h2>
                     <div
                         id="projects-grid"
                         class="grid gap-6 grid-cols-1 sm:grid-cols-2"
@@ -368,7 +368,7 @@
 
             <section id="posts" class="py-24">
                 <div class="max-w-5xl mx-auto px-6">
-                    <h2 class="font-mono text-accent text-sm mb-8">// posts</h2>
+                    <h2 class="section-heading font-mono text-accent text-sm mb-8">posts</h2>
                     <div
                         id="posts-grid"
                         class="grid gap-6 grid-cols-1 sm:grid-cols-2"
@@ -380,7 +380,7 @@
 
             <section id="skills" class="py-24">
                 <div class="max-w-5xl mx-auto px-6">
-                    <h2 class="font-mono text-accent text-sm mb-8">// skills</h2>
+                    <h2 class="section-heading font-mono text-accent text-sm mb-8">skills</h2>
                     <div
                         id="skills-list"
                         class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6"
@@ -392,7 +392,7 @@
 
             <section id="contact" class="py-24">
                 <div class="max-w-5xl mx-auto px-6">
-                    <h2 class="font-mono text-accent text-sm mb-8">// contact</h2>
+                    <h2 class="section-heading font-mono text-accent text-sm mb-8">contact</h2>
                     <p class="text-zinc-300 text-lg mb-6">Get in touch.</p>
                     <div class="flex gap-6 font-mono text-sm">
                         <a
